Bug 1169853 - Require semicolon after export default AssignmentExpression. r=shu